--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,20 @@
 .container {
-display: flex;
-gap: 20px;
+    display: flex;
+    gap: 20px;
 }
+
 .box {
-   background-color: slateblue;
-   padding: 20px;
-   border-radius: 20px; 
+    background-color: slateblue;
+    padding: 20px;
+    border-radius: 20px;
 }
+
 .container-2 {
-    display:flex ;
+    display: flex;
     gap: 5px;
-    flex-wrap: wrap ;
+    flex-wrap: wrap;
 }
+
 .item {
     width: 180px;
     height: 100px;
@@ -20,3 +23,8 @@ gap: 20px;
     border: 2px solid yellowgreen;
 }
 
+@media screen and (max-width: 576px) {
+    .container {
+        flex-direction: column;
+    }
+}
